Started work on JDK8 port  - Removed use of var keyword  - Added JDK8-specific test files  - Fixed most method calls, with the exception of Modules